# SAC-SMA

./: .gitattributes  .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: docs.yml
artifacts/: README.md
artifacts/11obs/: metrics_11obs.csv
artifacts/12rim/: metrics_12rim.csv
artifacts/15cdec/: metrics_15cdec.csv
artifacts/9unimp/: metrics_9unimp.csv
artifacts/calsim/11obs/: metrics_11obs.csv  metrics_11obs_calsim3.csv
artifacts/calsim/12rim/: metrics_12rim.csv
artifacts/calsim/9unimp/: metrics_9unimp.csv  metrics_9unimp_calsim3.csv
artifacts/calsim/compare/: anchor_metrics.csv  anchor_metrics_15cdec.csv  anchor_metrics_by_period.csv  anchor_metrics_full.csv  anchor_monthly.csv  anchor_monthly_15cdec.csv  anchor_monthly_full.csv  anchor_screened_vs_full.csv  basin_area_11obs_calsim.csv  basin_map_metrics.csv  calset_metrics.csv  coverage_by_set.csv  hru_kpet_by_soil_15cdec.csv  hru_veg_kpet_15cdec.csv  rolling_skill_30yr.csv  subarc_qmap_9unimp.csv  subarc_validation_metrics.csv  target_vs_calsim3.csv  vic_full_metrics.csv
artifacts/calsim/forcing_compare/: split_unsplit_anchor_skill.csv
artifacts/calsim/historical_lto/: lto_vs_livneh_summary.csv
artifacts/calsim/wgen_product_a/: wgen_a_vs_livneh_summary.csv
artifacts/cdec15/: metrics_15cdec.csv  metrics_15cdec_calsim3.csv
artifacts/dpl/: RUNS.md  adaptive_physics_metrics.csv  dtdp_lambda_compare.csv  dtdp_response_metrics.csv  dtdp_response_metrics_cs8.csv  dtdp_response_metrics_l0.3.csv  hybrid_progression.csv  noah_ca_hybrids_metrics.csv
artifacts/dpl/fidelity/: fidelity_benchmark.csv
artifacts/dpl/figures/: compare_ga_dpl_hybrid.csv  hybrid_progression.csv  hybrids_metrics.csv  noah_climate_adaptive_metrics.csv
artifacts/dpl/hamon/: metrics_hamon.csv  params_dpl.csv  train_log.csv
artifacts/dpl/hamon_dense/: metrics_hamon_dense.csv
artifacts/dpl/hybrid/: metrics_hybrid.csv  seasonal_compare_hybrid.csv
artifacts/dpl/hybrid_base/: metrics_hybrid.csv
artifacts/dpl/hybrid_dtdp/: metrics_hybrid.csv
artifacts/dpl/hybrid_pet_dt/: metrics_hybrid.csv  seasonal_compare_hybrid_pet_dt.csv
artifacts/dpl/lstm/: metrics_hybrid.csv
artifacts/dpl/noah/: metrics_noah.csv  params_canopy.csv  train_log.csv
artifacts/dpl/noah_ca/: params_canopy.csv  params_dpl.csv  train_log.csv
artifacts/dpl/noah_ft/: metrics_noah_ft.csv  metrics_noah_ft_plus2C.csv  params_canopy.csv  params_dpl.csv  train_log.csv
artifacts/dpl/noah_lite/: metrics_noah_lite.csv
artifacts/dpl/pt/: metrics_pt.csv  (+3 more)
data/: CALSIM3_FNF_FOOTPRINT.md  INVENTORY.md  README.md
data/calsim/: basin_area_11obs.csv  basin_area_15cdec_calsim.csv  basin_area_9unimp_calsim.csv  calib_12rim_monthly.csv  calib_9unimp_monthly.csv  calsim_crosswalk.csv  calsim_unimpaired_monthly.csv  fnf_11obs_monthly.csv  fnf_9unimp_monthly.csv  ga_optimum_11obs.csv  ga_optimum_12rim.csv  ga_optimum_9unimp.csv  hruinfo_9unimp.csv  lai_climatology_11obs.csv  lai_climatology_12rim.csv  lai_climatology_9unimp.csv  screened_footprint_11obs.csv  screened_footprint_9unimp.csv  soilveg_continuous_11obs.csv  soilveg_continuous_12rim.csv  soilveg_continuous_9unimp.csv  vic_gridinfo_8RI_N_MEL.csv  vic_gridinfo_I_ESTMN.csv  vic_gridinfo_I_HNSLY.csv  vic_gridinfo_I_SHSTA.csv  vic_gridinfo_I_SHSTA_no_gooselake.csv  vic_gridinfo_I_TRNTY.csv
data/cdec15/: basin_area.csv  hruinfo.csv
data/cdec15_grid/: ga_optimum.csv  hruinfo.csv  lai_climatology.csv  soilveg_continuous.csv  tminmax_livneh_percell.nc
data/hru/: hruinfo_11obs.csv  hruinfo_12rim.csv  hruinfo_15cdec.parquet
data/params/: ga_optimum_15cdec.csv  ga_optimum_15cdec.parquet
data/raw_gis/: SOURCES.md  sample_gis.py
data/reference/: anchor_area_scale.csv  basin_area_15cdec.parquet  basin_area_9unimp.csv  calib_11obs_monthly.csv  fnf_12rim_monthly.csv  gage_15cdec.parquet
data/region/: grid_cells.csv  lai_climatology.csv  prcp_x10_artifacts.csv  soilveg_continuous.csv
data/statewide/: grid_cells.csv
dataprep/: README.md  build_region_forcing.py  build_region_grid.py  build_region_statics.py  build_statewide_grid.py  gee_obs_region.py  gee_obs_statewide.py  local_obs_region.py  wgen_forcing.py
docs/: _sync_from_pandoc.py  appendix_a.md  appendix_b.md  appendix_c.md  appendix_d.md  appendix_e.md  conf.py  index.md  part1.md  part2.md  references.bib  requirements.txt
sacsma/: __init__.py  __main__.py  _compat.py  _figures.py  calibrate.py  calsim.py  cli.py  compare.py  dataprep.py  io.py  metrics.py  model.py  parameters.py  pet.py  pet_pt.py  plots.py  routing.py  sma.py  sma_noah_lite.py  snow17.py  spinup.py
sacsma/calsim/: __init__.py  catchments.py  compare.py  forcing_compare.py  plots.py  qmap.py
sacsma/cdec15/: __init__.py  calibrate.py  plots.py
sacsma/dpl/: __init__.py  adaptive_physics.py  climatology.py  config.py  data.py  dtdp_response.py  et_noah.py  evaluate.py  features.py  forcing_sensitivity.py  forward.py  graphs.py  loss.py  noah_ca_hybrids.py  parameter_net.py  pet.py  regularize.py  routing.py  seasonal_compare.py  sma.py  snow17.py  train.py
tests/: test_calsim.py  test_compare.py  test_metrics.py  test_parity_simflow.py  test_smoke.py
(+189 files in other folders)
