[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sacsma"
version = "0.1.0"
description = "Distributed SAC-SMA (Hamon PET / Snow-17 / SAC-SMA / Lohmann routing) applications for California watersheds: the 15-CDEC daily calibration and the CalSim/CalLite monthly domains with CalSim3 cross-comparison"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "DWR / Steinschneider Lab port" }]
keywords = ["hydrology", "sac-sma", "snow17", "lohmann-routing", "streamflow"]

dependencies = [
    "numpy>=1.24",
    "numba>=0.59",
    "pandas>=2.0",
    "matplotlib>=3.7",   # sacsma.plots calibration/validation diagnostics
]

[project.optional-dependencies]
gis = [
    "geopandas>=0.14",   # CalSim catchment layers (HRU->catchment mapping, coverage maps)
    "shapely>=2.0",      # Voronoi tessellation for HRU->catchment area overlap
    "pyproj>=3.6",
    "scipy>=1.10",       # Voronoi buffer spacing + per-month gamma-tail QMAP
]
io = [
    # the data/ tables are plain CSV (pandas built-in); only the gridded forcing needs these:
    "xarray>=2024.1",    # NetCDF forcing stores (the Livneh-unsplit historical grids)
    "netcdf4>=1.6",      # NetCDF engine xarray reads the forcing store with
]
dev = [
    "ruff>=0.4",
]
dpl = [
    # differentiable SAC-SMA + parameter-learning network (sacsma.dpl); the core
    # package runs without it. Prefer the conda-forge CUDA build (environment.yml).
    "torch>=2.10",
]

[project.scripts]
sacsma = "sacsma.cli:main"

[tool.setuptools.packages.find]
include = ["sacsma*"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
